@@ -1,22 +1,14 @@
 ** Unknown command `@asis' (left as is) 
 *** '}' without opening '{' before:  
-** Unknown command `@asis' (left as is) (l. 10)
-*** '}' without opening '{' before:  in nested table item (l. 10)
 ** closing @-command asis (l. 12)
 ** Unknown command `@asis' (left as is) 
 *** '}' without opening '{' before:  
-** Unknown command `@asis' (left as is) (l. 21)
-*** '}' without opening '{' before:  in table in table item (l. 21)
 ** closing @-command asis (l. 23)
 ** Unknown command `@asis' (left as is) 
 *** '}' without opening '{' before:  
-** Unknown command `@asis' (left as is) (l. 32)
-*** '}' without opening '{' before:  in table in table item in preformatted (l. 32)
 ** closing @-command asis (l. 34)
 ** Unknown command `@asis' (left as is) 
 *** '}' without opening '{' before:  
-** Unknown command `@asis' (left as is) (l. 45)
-*** '}' without opening '{' before:  in table in table item in preformatted (l. 45)
 ** closing @-command code (l. 47)
 ** Bad nesting of @asis and @code (l. 47)
 ** closing @-command asis (l. 47)
